LCDF Typetools NEWS

Version 2.36   9.Sep.2005

* t1reencode: Add many more standard encodings to t1reencode.  Patch from
  Peter Betzler.


Version 2.35   2.Jul.2005

* otftotfm: Split TeX extensions out from 'glyphlist.txt' into
  'texglyphlist.txt', leaving 'glyphlist.txt' exactly as distributed by
  Adobe.  Otftotfm reads both files.  Requested by Werner Lemberg.

* otftotfm: Add '% WARNMISSING' and '--warn-missing', so that missing
  characters result in blots and cause warnings when processed by dvips.
  Requested by Michael Zedler.


Version 2.34   11.Jun.2005

* otftotfm: Search for 'glyphlist.txt' using kpathsea, and set kpathsea
  program name to 'lcdftools'.  Requested by Karl Berry.


Version 2.33   3.Jun.2005

* otftotfm: Include more secondary replacements, including double-bar,
  centered asterisk, per-ten-thousand, and so forth.  Patch from Michael
  Zedler.

* otftotfm: Add '% POSITION' and '--position'.  Requested by Michael
  Zedler.


Version 2.32   31.May.2005

* otftotfm: Report correct dimensions for characters only in the base
  encoding.  Reported by Michael Zedler.


Version 2.31   30.May.2005

* otftotfm: Fix crash tickled by constructed characters, reported by
  Michael Zedler.

* Compilation fixes suggested by Nelson H.F. Beebe.


Version 2.30   8.May.2005

* otftotfm: Add support for 'dblbracketleft' and 'dblbracketright'.
  Secondary replacement can add characters to the font.

* otftotfm: Ligkern commands 'A {5} B' and 'A {L} B' can coexist, leading
  to a 5-character kern and no ligature.  Requested by Michael Zedler.


Version 2.29   7.May.2005

* otftotfm: Fix crash reported by Ryuji Suzuki.

* otftotfm: Add support for 'capitalcompwordmark' and
  'ascendercompwordmark', requested by Michael Zedler.

* otftotfm: Use OpenType OS/2 table to determine x-height, if available.


Version 2.28   25.Apr.2005

* otftotfm: '--math-spacing' doesn't set italic corrections to 0.  Thanks
  to Achim Blumensath.

