@@ -5,6 +5,8 @@ Version 2.36   9.Sep.2005
 * t1reencode: Add many more standard encodings to t1reencode.  Patch from
   Peter Betzler.
 
+* otfinfo: Add '-v/--font-version' option.
+
 
 Version 2.35   2.Jul.2005
 
